MCSCOP-12491: Adds new interface for backgrading
Change-Id: I0d6022fc99e0cf66c7d1fbb8a9f5b791141832de

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -137,13 +137,30 @@
         app:layout_constraintTop_toTopOf="@+id/active_tilt_mode_head"/>
 
     <TextView
+        android:id="@+id/backgrading_mode_head"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="backgradingMode"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/active_tilt_mode_head"/>
+
+    <TextView
+        android:id="@+id/backgrading_mode"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="-1"
+        app:layout_constraintStart_toEndOf="@+id/backgrading_mode_head"
+        app:layout_constraintTop_toTopOf="@+id/backgrading_mode_head"/>
+
+    <TextView
         android:id="@+id/auto_active_status_head"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:text="autoActiveStatus"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/active_tilt_mode_head"/>
+        app:layout_constraintTop_toBottomOf="@+id/backgrading_mode_head"/>
 
     <TextView
         android:id="@+id/auto_active_status"
