--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -154,13 +154,30 @@
         app:layout_constraintTop_toTopOf="@+id/backgrading_mode_head"/>
 
     <TextView
+        android:id="@+id/bucketrecall_status_head"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="bucketRecallStatus"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/backgrading_mode_head"/>
+
+    <TextView
+        android:id="@+id/bucketrecall_status"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:text="-1"
+        app:layout_constraintStart_toEndOf="@+id/bucketrecall_status_head"
+        app:layout_constraintTop_toTopOf="@+id/bucketrecall_status_head"/>
+
+    <TextView
         android:id="@+id/auto_active_status_head"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:text="autoActiveStatus"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/backgrading_mode_head"/>
+        app:layout_constraintTop_toBottomOf="@+id/bucketrecall_status_head"/>
 
     <TextView
         android:id="@+id/auto_active_status"
